--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,17 @@
     height: 70px;
     background: #08ad9f;
 }
+#sublogo{
+    font-size: .6rem;
+}
+#header img{
+    width: 80px;
+}
 #footer{
     background: linear-gradient(90deg, rgb(28, 54, 67), rgb(39, 59, 71) 50%, rgb(30, 83, 114));
 }
 
 #footer a{
     color: white;
+    font-size: 0.8rem;
 }
